# investec-my-charges

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  app.yml  app_entrypoint.sh  backup_db.sh  docker-compose.template  pyproject.toml  random_words.txt
app/: __main__.py  bot.py  crypto.py  currency.py  database.py  event.py  transaction.py
card-code/: env.json  main.js
config/: app.conf
lib/: mongotool
